--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       
       if(login) {
         setTimeout(()=> {
-          window.location.href = "/re2.html"
+          window.location.href = "https://progate.com/"
 	
         }, 100)
       }
